--- a/src/main/webapp/WEB-INF/edit.html
+++ b/src/main/webapp/WEB-INF/edit.html
@@ -1,43 +1,20 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Update person</title>
 </head>
 <body>
-<div>
-  <table>
-    <thead>
-    <tr>
-      <!--            <th th:text="#{msgs.headers.name}">Name</th>
-                  <th th:text="#{msgs.headers.Color}">Color</th>
-                  <th th:text="#{msgs.headers.Sentence}">Sentence</th>-->
-      <th th>ID</th>
-      <th th>Name</th>
-      <th th>LastName</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th th:text="${user.getId()}"></th>
-      <th th:text="${user.getName()}"></th>
-    </tr>
-    <tr th:each="array: ${userlist}">
 
-<!--      <td th:text="${array[0]}"/>
-      <td th:text="${array[1]}"/>
-      <td th:text="${array[2]}"/>-->
+<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+    <label for="name">Enter name: </label>
+    <input type="text" th:field="*{name}" id="name"/>
+    <br/>
+    <label for="lastName">Enter last name: </label>
+    <input type="text" th:field="*{lastName}" id="lastName"/>
+    <br/>
+    <input type="submit" value="Update!"/>
+</form>
 
-<!--      <td><button th:value="${array}" />Edit</td>
-      <td>
-        <a th:href="/edit">
-          <input type="button" th:value="${array}"/>
-        </a>
-      </td>-->
-
-    </tr>
-    </tbody>
-  </table>
-</div>
 </body>
 </html>
